--- a/app/src/main/res/layout/activity_last_screen.xml
+++ b/app/src/main/res/layout/activity_last_screen.xml
@@ -23,11 +23,11 @@
         app:layout_constraintTop_toBottomOf="@+id/button2">>
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/introduceEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
 
-            />
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
